--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-    "name": "decentralized-cards",
+    "name": "ytx-minting-dapp",
     "version": "1.0.0",
-    "description": "The decentralized card game built on Ethereum with state channels to provide a real-time user experience.",
+    "description": "The YTX NFT Minting dApp",
     "main": "index.js",
     "scripts": {
-        "dev": "cross-env NODE_ENV=development nodemon src/server/server.js",
         "start": "cross-env NODE_ENV=production node src/server/server.js",
         "compile": "cross-env NODE_ENV=production webpack",
         "watch": "cross-env NODE_ENV=development webpack -w"
@@ -12,25 +11,15 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/merlox/decentralized-card/issues"
-    },
-    "homepage": "https://github.com/merlox/decentralized-card#readme",
     "dependencies": {
-        "@babel/cli": "^7.12.1",
-        "body-parser": "^1.19.0",
         "cross-env": "^5.2.1",
-        "deep-equal": "^2.0.4",
-        "dotenv-safe": "^8.2.0",
-        "ethereumjs-abi": "^0.6.8",
-        "express": "^4.17.1",
-        "mongodb": "^3.6.3",
-        "socket.io": "^2.2.0",
-        "socket.io-client": "^2.2.0",
-        "web3": "^1.2.1",
-        "yargs": "^14.0.0"
+        "file-loader": "^6.2.0",
+        "react-router-dom": "^5.2.0",
+        "styled-components": "^5.2.1",
+        "web3": "^1.2.1"
     },
     "devDependencies": {
+        "@babel/cli": "^7.12.1",
         "@babel/core": "^7.12.3",
         "@babel/polyfill": "^7.12.1",
         "@babel/preset-env": "^7.12.1",
@@ -38,17 +27,12 @@
         "babel-loader": "^8.1.0",
         "css-loader": "^3.1.0",
         "html-webpack-plugin": "^3.2.0",
-        "nodemon": "^1.19.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
-        "react-router-dom": "^5.2.0",
         "style-loader": "^0.21.0",
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
-        "truffle-hdwallet-provider": "^1.0.16",
         "webpack": "^4.38.0",
-        "webpack-cli": "^3.3.6",
-        "webpack-dev-middleware": "^3.7.0",
-        "webpack-hot-middleware": "^2.25.0"
+        "webpack-cli": "^3.3.6"
     }
 }
