--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "The YTX NFT Minting dApp",
     "main": "index.js",
     "scripts": {
-        "start": "cross-env NODE_ENV=production node src/server/server.js",
+        "start": "cross-env NODE_ENV=production http-server docs/",
         "compile": "cross-env NODE_ENV=production webpack",
         "watch": "cross-env NODE_ENV=development webpack -w"
     },
