--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,11 @@
         "commonjs": true,
         "es2020": true
     },
+    "globals": {
+        "ethereum": "readonly",
+        "web3": "readonly",
+        "myWeb3": "readonly"
+    },
     "extends": "react-app",
     "parser": "babel-eslint",
     "parserOptions": {
