--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "web3": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.14.0",
-    "eslint-plugin-align-assignments": "^1.1.2"
+    "eslint-plugin-align-assignments": "^1.1.2",
+    "eslint-plugin-react": "^7.21.5"
   }
 }
