--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bootstrap": "^4.5.3",
         "cross-env": "^5.2.1",
         "file-loader": "^6.2.0",
+        "react-bootstrap": "^1.4.0",
         "react-router-dom": "^5.2.0",
         "styled-components": "^5.2.1",
         "web3": "^1.2.1"
