lazy load module integrated, card images imported from constants.js

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cross-env": "^5.2.1",
         "file-loader": "^6.2.0",
         "react-bootstrap": "^1.4.0",
+        "react-lazyload": "^3.1.0",
         "react-router-dom": "^5.2.0",
         "react-scroll-up-button": "^1.6.4",
         "styled-components": "^5.2.1",
